examples/test/testpolicy13152.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13152
  namespace: namespace471
spec:
  podSelector:
    matchLabels:
      key48: value0
      key1: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value32
          key37: value34
          key11: value0
      podSelector:
        matchLabels:
          key7: value45
          key19: value28
